--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100..700&family=Rubik:wght@800&display=swap"
       rel="stylesheet" />
-    <title>Portfólio Joãoo Pedro Saraiva</title>
+    <title>Portfólio João Pedro Saraiva</title>
   </head>
   <body>
     <div id="root"></div>
